syntax = "proto3";

package PRO;

//option optimize_for = LITE_RUNTIME;
option go_package = "gamelib/protobuf/gpro";
option csharp_namespace = "com.cms.client.network.gpro";
option java_multiple_files = true;
option java_package = "com.cms.client.network.gpro";

message Vector3d {
  float x = 1;
  float y = 2;
  float z = 3;
}

message GameUserInfo {
  int64 user_iid = 1;
  int64 role_iid = 2;
  string nickname = 3;
  Vector3d pos = 4;
}

//第一次进入game servre发的通知
message Game_EnterGame_req{
  int64 game_iid = 1;
}

message Game_EnterGame_ack{
  //0:success 1:failed
  int32 result = 1;
  int64 game_iid = 2;
}

message Game_ServiceDisable_ntf{
  int64 game_iid = 1;
}

//用户同步
message Game_UsersVisiable_ntf{
  repeated GameUserInfo online_users = 1;
  repeated int64 offline_users = 2;
}

//用户状态同步
message Game_UserState_sync{
  int64 user_iid = 1;
  Vector3d pos = 2;
}
